fix: Fixed ico url

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="dev.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/images/dev.ico" />
     <title>Diogo Soares • BIO</title>
     <link
       rel="stylesheet"
