--- a/fly-miles-calc/index.html
+++ b/fly-miles-calc/index.html
@@ -7,6 +7,8 @@
     <title>Calculadora de Milheiro - Milhas Aéreas</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3390193034518028"
+     crossorigin="anonymous"></script>
     <style>
         /* Animations for the toast */
         @keyframes slideIn { from { transform: translateX(100%); opacity: 0; } to { transform: translateX(0); opacity: 1; } }
