--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
     <link rel="stylesheet" href="css/index.css" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3390193034518028"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="container">
