feat: Add my cv

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       <p>Developer • Tech Lead • Coffee Enthusiast ☕</p>
 
       <div class="links">
+        <a href="./resume/index.html" target="_blank"
+          ><i class="fa fa-id-badge"></i> Resume</a
+        >
         <a href="https://www.linkedin.com/in/diogoschmidtsoares" target="_blank"
           ><i class="fab fa-linkedin"></i> LinkedIn</a
         >
