--- a/resume/index.html
+++ b/resume/index.html
@@ -255,7 +255,7 @@
             <h3 class="text-2xl font-bold border-b-2 border-blue-600 pb-2 mb-4">Education & Certifications</h3>
             <div class="space-y-3">
                 <div>
-                    <h4 class="font-bold">Master's in Artificial Intelligence and Automation</h4>
+                    <h4 class="font-bold">Postgraduate program in Artificial Intelligence and Automation</h4>
                     <p>Faculdade de Tecnologia Rocketseat, Brazil (Est. 2026)</p>
                 </div>
                 <div>
