--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
     <div class="container">
       <img src="assets/images/diogosoares.png" alt="Diogo Soares" />
       <h1>Diogo Soares</h1>
-      <p>Developer • Tech Lead • Coffee Enthusiast ☕</p>
+      <p>Founder @ Di2iT • Developer • Tech Lead • Coffee Enthusiast ☕</p>
 
       <div class="links">
         <a href="./resume/index.html" target="_blank"
           ><i class="fa fa-id-badge"></i> Resume</a
+        >
+        <a href="https://www.di2it.com" target="_blank"
+          ><i class="fas fa-briefcase"></i> Di2iT</a
+        >
+        <a href="https://www.finvoo.com.br" target="_blank"
+          ><i class="fas fa-chart-line"></i> Finvoo</a
         >
         <a href="https://www.linkedin.com/in/diogoschmidtsoares" target="_blank"
           ><i class="fab fa-linkedin"></i> LinkedIn</a
